--- a/flower.html
+++ b/flower.html
@@ -30,7 +30,14 @@
 	    }
 	    
 	    .centor{
-	        align:center;
+	        text-align:center;
+	    }
+	    
+	    .cat{
+	        display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
 	    }
 	</style>
 		<meta charset=“utf 8”>
@@ -38,7 +45,7 @@
 	</head>
 
 	<body>
-		<h1 style="color:red; align:center"> hi there! </h1>
+		<h1 style="color:red; text-align:center"> hi there! </h1>
 		<h1 style="color:red" class="centor"> my name is flowey!</h1>
 		<h1 id="bluethang" class="centor"> this is… </h1>
 		<h2 id="bluethang" class="centor"> well… </h2>
@@ -52,6 +59,7 @@
 		<!--can you see me?-->
 
 		<!--I bet you can see me!-->
+		
 		<!--are you having fun?-->
 
 		<!--no?-->
@@ -78,13 +86,13 @@
 		
 		<!--g.. o.. o.. d.. b.. y.. e..--> 
 
-        <hr>		
-		<img src="https://media.giphy.com/media/uhxfNlSRa6gF2/giphy.gif" height="200px" width="150px" alt="flowey" class="centor"> <br>
+        <hr style="color:red">		
+		<img class="cat" src="https://media.giphy.com/media/uhxfNlSRa6gF2/giphy.gif" height="200px" width="150px" alt="flowey"> <br>
 
 
-		<strong id="red" class="centor"> USER HAS LEFT THE CHAT </strong> <br>
+		<strong class="centor" style="color:darkred; text-align:center"> USER HAS LEFT THE CHAT </strong> <br>
 		<br>
-		<em id="meh" class="centor"> can... you... hear... me... now.....</em>
+		<em class="centor" style="color:darkred; text-align:center"> can... you... hear... me... now.....</em>
 		
 		<h4 id="meh" class="centor"> you..... </h4>
 		
@@ -107,6 +115,16 @@
 		<strong id="red"> ... </strong> <br> <br>
 		<strong id="red"> you... have.. made... a... grave... mistake.........</strong> <br> <br>
 		<strong id="red"> chat.exe has been closed by User Flowey</strong> <br> <br>
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
 		
 		
 		
