--- a/newFlower.html
+++ b/newFlower.html
@@ -9,13 +9,25 @@
             color: white;
             font-size: 30px;
         }
+        
+        .topnav{
+            padding: 10px;
+            text-align:center;
+            background: #000000;
+            color:aqua;
+            font-size: 30px;
+        }
         </style>
         <title>lo</title>
     </head>
     <body>
-        <div class="header">This is a header
-        <p> It's very nice</p>
-        <div>Hel<span style="color:red">lo</span> World</div>
+        <div class="header">Header
+        <p> redaeH</p>
+        </div>
+        <div class="topnav">
+            <a href="link.link">Link</a>
+            <a href="link.link">Link</a>
+            <a href="link.link">Link</a>
         </div>
     </body>
 </html>
