--- a/newFlower.html
+++ b/newFlower.html
@@ -29,7 +29,7 @@
         
         .topnav a:hover {
             background-color: #444;
-            color:black;
+            color:red;
         }
         </style>
         <title>lo</title>
